@@ -20,7 +20,9 @@
  - New unicode character chart window.
  - xtext: properly recalculate text widths after a font change.
  - Fixed IRC::dcc_list 1.8.x incompatibility (Charles Lopes).
- - xtext: Implemented scrolling instead of full redraws.
+ - xtext: Implemented scrolling instead of full redraws when not using
+   a background image or transparency.
+ - 
  - 
  - 
  - TODO: charset translation for dcc chat
